<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">茶密</string>
    <string name="intro_message">
        <![CDATA[
         
             
            This sample demonstrates how to use the Bluetooth LE Generic Attribute Profile (GATT)
            to transmit arbitrary data between devices.
             
         
        ]]>
    </string>
    
	<string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">当前状态：已连接</string>
    <string name="disconnected">当前状态：已断开</string>
    <string name="title_devices">扫描茶密</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
 
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
 
    <!-- Menu items -->
    <string name="menu_connect">点击连接</string>
    <string name="menu_disconnect">点击断开</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>

    <!-- String -->
    <string name="str_back">Back</string>
    <string name="str_service">Service :</string>
    <string name="str_uuid">UUID :</string>
    <string name="str_characteristic">Characteristic :</string>
    <string name="str_battery">Battery :</string>
    <string name="str_rssi">RSSI :</string>
    <string name="str_txpower">Tx Power :</string>
    <string name="str_read">Read</string>
    <string name="str_notify">Notify</string>
    <string name="str_write">Write</string>
    <string name="str_reset">泡茶次数清零</string>
    <string name="str_wind">Demo by Wind http://www.wind-mobi.com</string>
</resources>
